--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" 
               content="width=device-width, 
+                       maximum-scale=0.4,
+                       minimum-scale=0.4
                        initial-scale=1.0">
         
         <title>猪蛋飞行</title>
