--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <body>
-        <a href="download.html" 
+        <a href="markmap.html" 
            title="思维导图" 
            style="text-decoration: none;">
             <button class="gobutton" 
