--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
            title="思维导图" 
            style="text-decoration: none;">
             <button class="gobutton" 
-                    style="position:relative;
+                    style="position:absolute;
                            z-index: 301;
-                           text-align: center;
-                           align-items: center;
-                           display: flex; margin:0 auto;
-                           top:70%;"> 
+                           transform: translate(50%,50%);
+                           display: flex; 
+                           margin:0 auto;
+                           bottom:-40vmax;"> 
                 <div style="font-size: 35px;
                             font-weight: bold;
                             text-align: center;">
