--- a/majorcomponent.html
+++ b/majorcomponent.html
@@ -186,7 +186,7 @@
                 返回思维导图
             </div>
             <div class="iconButton">
-              <img src="arrow-left-line.svg" 
+              <img src="arrow-right-line-w.svg" 
                    viewBox="0 0 24 24" 
                    width="48" 
                    height="48"
