--- a/majorcomponent.html
+++ b/majorcomponent.html
@@ -90,7 +90,7 @@
                   display: flex;
                   width: 44vmax;
                   height:28.75vmax ;
-                  margin-top: 2vh;
+                  margin-top: 0;
             }
             .text {position: relative;
                 margin: 0;
