--- a/majorcomponent.html
+++ b/majorcomponent.html
@@ -88,9 +88,9 @@
             }
             .pic {position: relative;
                   display: flex;
-                  width: 44vmax;
-                  height:28.75vmax ;
-                  margin-top: 0;
+                  width: 40vmax;
+                  height:24.75vmax ;
+                  margin-top: 2vh;
             }
             .text {position: relative;
                 margin: 0;
