--- a/majorcomponent.html
+++ b/majorcomponent.html
@@ -91,6 +91,7 @@
                   width: 36vmax;
                   height:20.75vmax ;
                   margin-top: 1vh;
+                  margin-bottom: 2vh;
             }
             .text {position: relative;
                 margin: 0;
