--- a/wings.html
+++ b/wings.html
@@ -147,7 +147,7 @@
         }
     </style>
 </head>
-<body>
+<body style="overflow-x:hidden !important;">
     <div class="upbox">
     </div>
     <div class="mainhead">
