--- a/newton.html
+++ b/newton.html
@@ -112,11 +112,18 @@
                 and opposite reaction (force). This law can be illustrated 
                 by the example of firing a gun. The action is the forward 
                 movement of the bullet while the reaction is the backward 
-                recoil of the gun.
+                recoil of the gun. In an airplane, the propeller moves and pushes back the
+air; consequently, the air pushes the propeller (and thus the
+airplane) in the opposite direction—forward. In a jet airplane,
+the engine pushes a blast of hot gases backward; the force of
+equal and opposite reaction pushes against the engine and
+forces the airplane forward.
             </p>
             <p class="text">
                 牛顿第三定律是作用与反作用的定律。此定律表述，所有作用（力）都有一个大小相等且方向相反的反作用（力）。
-                这个定律可以开枪为例来解释。子弹向前的运动是作用，枪的后坐力是反作用。
+                这个定律可以开枪为例来解释。子弹向前的运动是作用，枪的后坐力是反作用。对于飞机，螺旋桨运动并
+                将空气向后推；因此，空气也在朝相反的方向推动螺旋桨（由此推动飞机）。对于喷气式飞机，
+                发动机向后推动一股炽热的气体；大小相等，方向相反的反作用力推动引擎，使飞机向前运动。
             </p>
             <p class="text"
                style="margin-top: 100px;">
