--- a/airfoil.html
+++ b/airfoil.html
@@ -142,10 +142,10 @@ maximum distance from the chord line to the camber line is designated as the air
             从翼弦到中弧线的最大距离称作翼型的弯度。[图1-6]
             弯度一般用相对于<mark class="red">翼弦长度</mark>的百分比表示，例如5%弯度。
         </p>
-        <math class="equation"
-              xmlns='http://www.w3.org/1998/Math/MathML'> <mfrac> <mrow> <mi> c </mi> <mi> a </mi> <mi> m </mi> <mi> b </mi> <mi> e </mi> <mi> r </mi> </mrow> <mrow> <mi> c </mi> <mi> h </mi> <mi> o </mi> <mi> r </mi> <mi> d </mi> <mi> &nbsp; </mi> <mi> l </mi> <mi> e </mi> <mi> n </mi> <mi> g </mi> <mi> t </mi> <mi> h </mi>  </mrow> </mfrac> <mo> &#x00D7; <!-- multiplication sign --> </mo> <mn> 100 </mn> <mo> % </mo> <mo> = </mo> <mo> % </mo> <mi> c </mi> <mi> a </mi> <mi> m </mi> <mi> b </mi> <mi> e </mi> <mi> r </mi> </math>
+        <div class="equation">
+        <math xmlns='http://www.w3.org/1998/Math/MathML'> <mfrac> <mrow> <mi> c </mi> <mi> a </mi> <mi> m </mi> <mi> b </mi> <mi> e </mi> <mi> r </mi> </mrow> <mrow> <mi> c </mi> <mi> h </mi> <mi> o </mi> <mi> r </mi> <mi> d </mi> <mi> &nbsp; </mi> <mi> l </mi> <mi> e </mi> <mi> n </mi> <mi> g </mi> <mi> t </mi> <mi> h </mi>  </mrow> </mfrac> <mo> &#x00D7; <!-- multiplication sign --> </mo> <mn> 100 </mn> <mo> % </mo> <mo> = </mo> <mo> % </mo> <mi> c </mi> <mi> a </mi> <mi> m </mi> <mi> b </mi> <mi> e </mi> <mi> r </mi> </math>
+        </div> 
         <div>
-            <div>
                 <img src="airfoilc.png"
                      class="textpic">
             </div>
@@ -215,12 +215,18 @@ airfoil. [Figure 1-7]
             <img src="airfoiltype.png"
                  class="textpic">
             </div>
-        </div>
+        
             <div class="blankbox"></div>
         </div>
     </div>
-    <div class="lowerbox">
 
+
+
+
+
+
+
+    <div class="lowerbox">
     </div>
     <div class="bottombox">
 
