--- a/wv.html
+++ b/wv.html
@@ -90,25 +90,25 @@
                 altitude, and only a minute fraction of the total occurs above the tropopause.
             </p>
             <p class="text h1text">
-                水汽是水的气体形态，是大气的重要组成部分。水汽只占地球大气的一小部分，含量在痕量到4%之间，而且其含量
+                水汽是水的气体形态，是大气的重要组成部分。水汽只占地球大气体积的一小部分，含量从痕量到4%之间，而且其含量
                 随地点和时间的变化而差异显著。整个大气半数的水汽都聚集在2km（6500ft）高度以下，处于对流层之上的
                 水汽只占很小一部分。
             </p>
             <p class="text h1text">
-                The development of clouds and precipitation can have potential impacts on flight operations.
+                The development of clouds and <mark class="red">precipitation</mark> can have potential impacts on flight operations.
                 Water vapor is important, not only as the raw material for clouds and precipitation (e.g., rain and
                 snow),
                 but also as a vehicle for the transfer of heat energy and as a regulator of the Earth’s temperatures
                 through
-                absorption and emission of radiation, most significantly in the thermal infrared.
+                absorption and emission of radiation, most significantly in the <mark class="yellow">thermal infrared</mark>.
                 The amount of water vapor present in a given air sample may be measured in a number of different ways,
                 involving such concepts as relative humidity and dewpoint. Before talking about these subjects, change
                 of phase and how water
                 cycles through the Earth-atmosphere system will be discussed.
             </p>
             <p class="text h1text">
-                云和降水的产生会间接影响飞行任务。水汽不仅是产生云和降水（例如雨，雪等等）的原材料，也是热能传递的载体和地球温度的调节器。
-                调节温度是通过吸收辐射和释放辐射来完成的，尤其是通过红外线。在一个给定的空气样本中，水汽的含量可用多种方式测量，
+                云和<mark class="red">降水</mark>的产生会间接影响飞行任务。水汽不仅是产生云和降水（例如雨，雪等等）的原材料，也是热能传递的载体和地球温度的调节器。
+                调节温度是通过吸收辐射和释放辐射来完成的，尤其是通过<mark class="yellow">红外线</mark>。在一个给定的空气样本中，水汽的含量可用多种方式测量，
                 涉及相对湿度和露点等概念。在讲述这些课题之前，先讲讲相变和地球大气系统中水的循环过程。
             </p>
             <h2 class="h2">
@@ -118,23 +118,23 @@
             <p class="text h2text">
                 Water changes from one state of matter (e.g., solid, liquid, or vapor) to another at
                 the temperatures and pressures experienced near the surface of the Earth. Interestingly,
-                water is the only substance on Earth that exists naturally in all three phases: as water
+                water is the only substance on Earth that exists naturally in all three <mark class="red">phases</mark>: as water
                 droplets, ice crystals (visible as clouds), and water vapor.
             </p>
             <p class="text h2text">
                 地表附近在温度和气压的变化下，水从物质的一个状态（例如，固态，液态，气态）转变为另一个状态。
-                有趣的是，水是地球上唯一一种在自然中三种形态都存在的物质：水滴，冰晶（云），水汽。
+                有趣的是，水是地球上唯一一种在自然中三<mark class="red">相</mark>都存在的物质：水滴，冰晶（云），水汽。
             </p>
             <p class="text h2text">
                 Water has some unique thermal properties, which make it a powerful heat transport mechanism.
-                It has the highest specific heat capacity of any naturally occurring substance (see Table 5-4).
+                It has the highest <mark class="red">specific heat capacity</mark> of any naturally occurring substance (see Table 5-4).
                 That means water has a much higher capacity for storing heat energy (with little resulting temperature
                 change)
                 than other substances. These properties make water an ideal heat transport mechanism and have
                 important implications on weather and climate.
             </p>
             <p class="text h2text">
-                水具有独特的热属性，这使它成为一种强大的热交换工具。水在所有自然存在的物质之中，具有最高的比热容（见表格1-1）。
+                水具有独特的热属性，这使它成为一种强大的热交换工具。水在所有自然存在的物质之中，具有最高的<mark class="red">比热容</mark>（见表格1-1）。
                 这意味比起其他物质，水具有的容纳热能的能力（容纳热能导致的温度变化小）更高。这些性质使得水成为一种理想的热传递
                 方式，对于气象和气候的影响极其重大。
             </p>
