--- a/apaa.html
+++ b/apaa.html
@@ -70,9 +70,9 @@
                     how their aircraft will perform at various altitudes.
                 </p>
             </div>
-            <audio id="audio1" controls>
-                <source src="apaa1.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
+            <audio id="audio1" controls class="audioh1">
+                <source src="apaaa/apaa1.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
             </audio>
             <p class="text h1text">
                 大气压力时描述大气状态的最基本参数，它通常出现在天气报告中。不同于温度和相对湿度，大气压力的变化不像前两者
@@ -88,9 +88,9 @@
                     altitude.
                 </p>
             </div>
-            <audio id="audio2" controls>
-                <source src="apaa2.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
+            <audio id="audio2" controls class="audioh1">
+                <source src="apaaa/apaa2.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
             </audio>
             <script src="all.js"></script>
 
@@ -113,6 +113,10 @@
                 unit of time and area also increases.
                 Since molecules move in all directions, air pressure is exerted in all directions.
             </p>
+            <audio id="audio3" controls class="audioh2">
+                <source src="apaaa/apaa3.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 大气中组成不同气层的原子和分子们持续不断地做朝向随机方向的运动。尽管它们尺度很小，但当它们撞击到物体表面时，
                 仍会对物体表面施加压力。每一个分子都很小，而且只施加很小的一点压力，然而，如果将每时每刻撞击表面的大量分子
@@ -126,12 +130,16 @@
                 column of mercury (see chapter: Air pressure). He actually measured pressure, converting it directly to
                 weight.
             </p>
+            <audio id="audio4" controls class="audioh2">
+                <source src="apaaa/apaa4.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 大气压力是大气的重量施加在单位面积上的力。由于空气不是固体，所以不能用常规单位衡量空气。但在三个世纪前，
                 埃万杰利斯塔·托里拆利发现可以通过水银柱与气压平衡的方式来测量大气重量（详见章节：空气压力）。他实际测量出的是大气压力，然后将其转化为重量。
             </p>
             <div class="svgdiv">
-                <img src="avb.svg" class="unselectable" draggable="false" oncontextmenu="return false;">
+                <img src="apaap/avb.svg" class="unselectable" draggable="false" oncontextmenu="return false;">
             </div>
             <p class="table" style="text-align: left;
                       margin-top: 0;">
@@ -145,6 +153,10 @@
                 The instrument Torricelli designed to measure pressure was called a barometer. The aneroid barometer is
                 the type most commonly used by meteorologists and the aviation community.
             </p>
+            <audio id="audio5" controls class="audioh2">
+                <source src="apaaa/apaa5.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 托里拆利所设计的这个测压仪器叫做气压计。其中，膜盒式气压计在气象学和航空领域中被广泛运用。
             </p>
@@ -157,12 +169,16 @@
                 mechanism magnifies the movement of the cell driving an indicator hand along a scale graduated in
                 pressure units.
             </p>
+            <audio id="audio6" controls class="audioh2">
+                <source src="apaaa/apaa6.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 膜盒气压计的主要部件（如图1-2）是弹性金属膜盒以及指示部件。金属盒中的空气被抽出，形成部分真空。当气压变化时，
                 膜盒会随之收缩或扩张。膜盒的一端被固定，另一端链接着指示部件。传动机构负责放大膜盒的运动，使指针沿着指示压力单位的刻度移动。
             </p>
             <div class="svgdiv">
-                <img src="abe.svg" class="unselectable" draggable="false" oncontextmenu="return false;">
+                <img src="apaap/abe.svg" class="unselectable" draggable="false" oncontextmenu="return false;">
             </div>
             <p class="table" style="text-align: left;
                       margin-top: 0;">
@@ -182,6 +198,10 @@
                 (which are equivalent). The unit inch of mercury (inHg or Hg) is still used in the United States for
                 altimetry.
             </p>
+            <audio id="audio7" controls class="audioh2">
+                <source src="apaaa/apaa7.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 在世界范围内，大气压力有多种表达方式（如表格1-1）.全球的气象学家长期以来使用毫巴（mb或mbar）来测量大气压力。
                 毫巴是将大气压力定义为施加在每平方厘米上的力。然而，在1960年国际单位制（SI）设立之后，百帕斯卡（hPa）成为了多数国家使用的单位，
@@ -282,12 +302,16 @@
                 than at
                 Jinan (see Figure 2-1).
             </P>
+            <audio id="audio8" controls class="audioh3">
+                <source src="apaaa/apaa8.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <P class="text h3text">
                 机场测量出的气压叫做场面气压，或者叫在机场标高处测得的实际气压。高度增高，气压减小，因此，机场标高高的机场通常比标高低的机场气压低。
                 例如，新疆所测得的场压比济南小。（如图2-1）
             </P>
             <div class="svgdiv">
-                <img src="pdida.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
+                <img src="apaap/pdida.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
                        height: 100%;
                        margin: 0;">
             </div>
@@ -303,6 +327,10 @@
                 Atmospheric pressure varies with altitude and the temperature of the air, as well as with other minor
                 influences, such as water vapor.
             </P>
+            <audio id="audio9" controls class="audioh2">
+                <source src="apaaa/apaa9.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <P class="text h2text">
                 大气压力随高度和气温变化，以及其他元素例如水汽的微量影响。
             </P>
@@ -316,6 +344,10 @@
                 them
                 decreases. Figure 2-1 shows the pressure decrease with height in the standard atmosphere.
             </P>
+            <audio id="audio10" controls class="audioh3">
+                <source src="apaaa/apaa10.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 当一个人在大气中向上运动时，此人上方的空气的重量减小。如果这个人还带着气压计，便可测量出气压随着上方空气重量的减小而减小。
                 如图2-1，在标准大气中，气压随高度升高而减小。
@@ -325,6 +357,10 @@
                 temperatures are seldom standard, so temperature’s effects on pressure will be explored in the following
                 section.
             </p>
+            <audio id="audio11" controls class="audioh3">
+                <source src="apaaa/apaa11.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 图2-1中的标准高度是基于标准温度，在实际的大气中，温度通常是非标准的，温度对气压的影响将在下面的内容中讲到。
             </p>
@@ -385,6 +421,10 @@
                 height in
                 cold air is greater than standard.
             </p>
+            <audio id="audio12" controls class="audioh3">
+                <source src="apaaa/apaa12.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 如同大多数物质，空气在温度升高时膨胀，在冷却时收缩。如图2-2所示的三团空气：一个温度比标准温度低，一个
                 温度是标准温度，最后一个温度比标准温度高。每一团空气的顶部和底部的气压与其他气团相等。温度较高的气团垂直扩张的程度比标准温度气团
@@ -539,13 +579,17 @@
                 elevation is 25 inHg; pressure increases about 1 inHg for each 1,000 ft, or a total of 5 inHg. Sea level
                 pressure is approximately 25 + 5, or 30 inHg.
             </P>
+            <audio id="audio13" controls class="audioh2">
+                <source src="apaaa/apaa13.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 由于气压随高度改变而发生显著变化，我们无法直接将两个处于不同高度的机场的场面气压进行比较。为了使他们可以被比较，
                 转而使用些许相同的基准面。标准海平面(MSL)是最可靠的通用基准。如图3-1，在5000英尺海拔高度上的机场上所测得的气压为25英寸汞柱；气压每1000英尺大约升高1英寸汞柱，
                 总共5英寸汞柱。海平面气压大约为25+5，30英寸汞柱。
             </p>
             <div class="svgdiv svgborder">
-                <img src="cslp.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
+                <img src="apaap/cslp.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
                        height: 100%;
                        margin: 0;">
             </div>
@@ -558,6 +602,10 @@
                 the
                 Earth, so a sequence of surface charts must be viewed to follow these changing pressures.
             </p>
+            <audio id="audio14" controls class="audioh2">
+                <source src="apaaa/apaa14.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 在地面天气图中一般使用海平面气压，地球上的气压持续不停的变化，因此必须根据这些气压的变化而发布一系列地面天气图。
             </p>
@@ -582,6 +630,10 @@
                 the
                 standard atmosphere.
             </P>
+            <audio id="audio15" controls class="audioh2">
+                <source src="apaaa/apaa15.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h2text">
                 高度表本质上是一种膜盒式气压计。它与常规膜盒气压计的区别在于刻度。高度表的刻度是以高度的增量来显示，而不是压力单位。高度表的刻度标准是基于标准大气压。
             </p>
@@ -594,6 +646,10 @@
                 Earth.
                 However, in aviation, it can have many meanings.
             </P>
+            <audio id="audio16" controls class="audioh3">
+                <source src="apaaa/apaa16.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 高度看似是一个简单的术语，意味着物体高于地表的垂直距离。然而，在航空领域，它可以有多种含义。
             </p>
@@ -610,6 +666,10 @@
                 altimeter does
                 not indicate true altitude, what does it indicate?
             </p>
+            <audio id="audio17" controls class="audioh3">
+                <source src="apaaa/apaa17.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 由于真实的大气很少符合标准条件，大气表上的高度指示通常不是实际的或真正的高度。绝对高度是指距平均海平面的实际垂直距离。如果高度表不能显示绝对高度，那么它显示的是什么？
             </p>
@@ -629,6 +689,10 @@
                 indicated altitude. In the cold air column, the pilot would fly at an altitude lower than the indicated
                 altitude.
             </P>
+            <audio id="audio18" controls class="audioh3">
+                <source src="apaaa/apaa18.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 图 2-2 显示了平均温度对三个空气柱厚度的影响。三个空气柱的底部和顶部的压力相等。由于高度表本质上是一种膜盒气压计，因此高度表在每个柱顶显示的高度相同。要更清楚地看到这种影响，请参见图
                 3-2。在暖空气柱中，飞行员会飞得比指示高度更高。在冷空气柱中，飞行员会飞得比指示高度更低。
@@ -738,6 +802,10 @@
                 on
                 the altimeter when set at the local altimeter setting. But what is altimeter setting?
             </P>
+            <audio id="audio19" controls class="audioh3">
+                <source src="apaaa/apaa19.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 高度表上的高度还会随着地面压力的变化而变化。高度表上的可移动刻度使飞行员可以调整地面压力，但飞行员无法调整高度表以适应空气柱的平均温度。指示高度是当高度表调整为当地高度表拨正值时显示的高于平均海平面的高度。那么什么是高度表设置？
             </p>
@@ -750,6 +818,10 @@
                 scale of
                 the pressure altimeter is set so the altimeter indicates true altitude at field elevation.
             </p>
+            <audio id="audio20" controls class="audioh3">
+                <source src="apaaa/apaa20.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 <strong>高度表设置:</strong>
                 由于高度刻度是可调的，飞行员可以将高度表拨正值设置在某个指定高度从而获取绝对高度。起飞和着陆是飞行中最关键的阶段，因此机场标高是高度表读取绝对高度的最理想高度。因为高度表拨正值就是是压力高度表的刻度的拨正值值，所以高度表显示相对于机场标高的绝对高度。
@@ -765,12 +837,16 @@
                 pressure, the
                 plane is lower than the altimeter indicates.
             </p>
+            <audio id="audio21" controls class="audioh3">
+                <source src="apaaa/apaa21.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <P class="text h3text">
                 为了确保高度表读数与附近其他飞机的高度表读数一致，飞行员应确保高度表设置的时效性。
                 在飞行过程中，飞行员应根据最近的地面天气报告站不停的调整高度表设置。如果飞行员在飞行中不注意调整高度表，可能会遇到问题，如图 2-3 所示。当飞行员从高压区飞向低压区时，飞机的实际高度低于高度表显示的高度。
             </P>
             <div class="svgdiv svgborder">
-                <img src="apd.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
+                <img src="apaap/apd.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
                        height: 100%;
                        margin: 0;">
             </div>
@@ -790,13 +866,17 @@
                 between indicated and true altitude into account. The pilot needs to know that the true altitude assures
                 clearance of terrain, and compute a correction to indicated altitude.
             </P>
+            <audio id="audio22" controls class="audioh3">
+                <source src="apaaa/apaa22.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 图 2-4 显示了温度变化对高度表读数的影响。当飞行员从暖空气飞向冷空气时，高度表读数高——飞行员的实际高度低于高度表显示的高度。
                 在平坦地形上，这种低于绝对高度的读数没有太大问题；附近的其他飞机也在飞指示高度而非绝对高度，大家的高度表读数是一样的。然而，如果在寒冷天气下飞越山区，
                 飞行员需要考虑指示高度与绝对高度之间的差异。飞行员需要确保绝对高度可以越过地形，并计算指示高度的修正值。
             </p>
             <div class="svgdiv svgborder">
-                <img src="cwad.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
+                <img src="apaap/cwad.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
                        height: 100%;
                        margin: 0;">
             </div>
@@ -827,6 +907,10 @@
                 reporting
                 station.
             </p>
+            <audio id="audio23" controls class="audioh3">
+                <source src="apaaa/apaa23.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 如果飞行员能够始终确定从飞机到地面的空气柱的平均温度，飞行计算机就可以使用这个平均温度来计算绝对高度。然而，飞行员唯一可以参考的空气温度是飞行员所在高度处的自由大气的温度。
                 因此，飞行计算机使用外界大气温度（OAT）来修正指示高度以近似绝对高度。修正后的（近似绝对）高度是基于现有温度与标准大气温度的偏差估算值，根据飞机下方空气柱温度对指示高度进行修正的高度，这是绝对高度
@@ -851,6 +935,10 @@
                 constant-pressure altitude. When a pilot flies a
                 constant-pressure altitude, the pilot is flying a constant-pressure surface.
             </p>
+            <audio id="audio24" controls class="audioh3">
+                <source src="apaaa/apaa24.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 在标准大气压下，海平面压力为 1013.25 百帕（29.92 英寸汞柱）。在标准大气压中，气压以固定速率向上减小。因此，在标准大气压中，
                 任何指定高度都有特定的气压。气压高度是高度表设置为 1013.25 百帕（29.92 英寸汞柱）时显示的高度（基于平均海平面）。换句话说，它是当高度表设置为 1013.25
@@ -866,6 +954,10 @@
                 will
                 almost always be above the highest terrain features.
             </p>
+            <audio id="audio25" controls class="audioh3">
+                <source src="apaaa/apaa25.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 如上所述，等压面的在不同位置的高度不同。因此，当飞行员在特定气压高度（即等压面）上飞行时，
                 飞行员的绝对高度会随距离而变化。然而，在气压高度处于或高于FL180（美国）的高度飞行，飞行员几乎总是高于地形特征的最高点。
@@ -882,6 +974,10 @@
                 Density altitude bears the same relation to pressure altitude as true altitude does to indicated
                 altitude.
             </p>
+            <audio id="audio26" controls class="audioh3">
+                <source src="apaaa/apaa26.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 密度高度是修正了偏离标准大气温度的温度后的气压高度。密度高度与气压高度的关系类似于绝对高度与指示高度的关系。
             </p>
@@ -894,6 +990,10 @@
                 density altitudes than
                 airports with lower field elevations (e.g., Jinan Yaoqiang International Airport).
             </p>
+            <audio id="audio27" controls class="audioh3">
+                <source src="apaaa/apaa27.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 密度高度与大气密度间接相关；随着空气密度增加，密度高度降低；反之，随着空气密度减少，
                 密度高度增加。机场标高较高（如稻城亚丁机场）的机场压力较低、密度较低，因此密度高度较高；而机场标高较低（如济南遥墙机场）的机场则相反。
@@ -912,6 +1012,10 @@
                 generally
                 negligible.
             </p>
+            <audio id="audio28" controls class="audioh3">
+                <source src="apaaa/apaa28.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 在标准大气条件下，密度高度等于机场标高，但气象条件很少是标准的。在报告中低于（高于）标准压力和/或高于（低于）标准温度的机场，
                 密度高度高于（低于）标准。温度是最重要的因素，因为温度对大气密度在水平方向的影响最大。在炎热的日子里，空气变得不那么稠密，导致密度高度高。
@@ -924,6 +1028,10 @@
                 reduces
                 aircraft performance in the following three ways:
             </p>
+            <audio id="audio29" controls class="audioh3">
+                <source src="apaaa/apaa29.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 密度高度是飞机性能的一个指数。高密度高度降低飞机性能。低密度高度飞机性能提高。高密度高度是一种危险天气情况，因为它通过以下三种方式降低飞机性能：
             </p>
@@ -957,13 +1065,17 @@
                 density
                 altitude on takeoff distance and rate of climb.
             </p>
+            <audio id="audio30" controls class="audioh3">
+                <source src="apaaa/apaa30.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 结果是，高密度高度延长了飞行员的起飞和着陆滑跑距离，并减少了爬升率。在离地前，飞机必须达到更快的地速，因此需要用更多的跑道；
                 减少的功率和推力也增加了对更长跑道的需求。飞机以更快的地速着陆，因此需要更长的距离来停止。以规定的指示空速飞行时，
                 它的实际空速更快，因此在给定时间内飞过更多的距离，这意味着以更小的角度爬升。再加上动力和爬升率降低更加加剧了这一问题。图3-1显示了密度高度对起飞距离和爬升率的影响。
             </p>
             <div class="svgdiv">
-                <img src="daaotoracr.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
+                <img src="apaap/daaotoracr.svg" class="unselectable" draggable="false" oncontextmenu="return false;" style="width: 100%;
                        height: 100%;
                        margin: 0;">
             </div>
@@ -979,6 +1091,10 @@
                 perform as
                 though it were at 12,700 ft indicated with a normal temperature of -8 °C.
             </p>
+            <audio id="audio31" controls class="audioh3">
+                <source src="apaaa/apaa31.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 在巡航高度上的高密度高度也可能产生问题。当空气温度高于标准大气温度时，较高的密度高度降低了实用升限。
                 例如，如果在压力高度为 10,000 英尺时温度为 20 °C，密度高度为 12,700 英尺。飞行员的飞机的表现就像是在正
@@ -989,6 +1105,10 @@
                 altitude 1,013.2 hPa
                 from the altimeter, obtain the OAT, and then use a flight computer to compute density altitude.
             </p>
+            <audio id="audio32" controls class="audioh3">
+                <source src="apaaa/apaa32.mp3" type="audio/mpeg">
+                你的浏览器不支持音频功能，请更新浏览器
+            </audio>
             <p class="text h3text">
                 为了计算密度高度，飞行员可以将高度表设置为 1,013.2 百帕（29.92 英寸），读取高度表上的压力高度，获取外界空气温度（OAT），然后使用飞行计算机计算密度高度。
             </p>
