--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                                    min-width=0.5
                                    max-width=0.5">
     <title>猪蛋飞行-Jewdoor flight</title>
-    <link rel="stylesheet" type="text/css" href="all.css">
+    <link rel="stylesheet" type="text/css" href="indexstyle.css">
     <link rel="icon" href="jewdoor.svg" sizes="16x16">
 </head>
 <body style="overflow-x: hidden !important;">
